# claunch

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  build.py  build.sh  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.json
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
TODO/: security-confirmation-dialog.md
src/claunch/: __init__.py  cli.py  handler.py
src/claunch/app/: Info.plist  main.swift
